<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
            	android:id="@+id/locationView"
            	android:gravity="center_horizontal"
            	android:orientation="vertical"
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent">
            		<EditText
        				android:id="@+id/phoneNo"
        				android:maxLength="11"
        				android:layout_width="fill_parent"
       					android:layout_height="wrap_content"
       					android:numeric="integer"
       					android:gravity="center_horizontal"
       					android:background="@android:drawable/editbox_background"/>
       				<Button
        				android:id="@+id/search"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_toRightOf="@id/phoneNo"
        				android:text="@string/search" />
			<RelativeLayout 
       			android:orientation="vertical"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">
    			<TextView
        			android:id="@+id/provincelabel"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/province"/>
       			<TextView
        			android:id="@+id/province"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:layout_toRightOf="@id/provincelabel"
        			android:text="" />    	
        		</RelativeLayout>	
        	<RelativeLayout 
       			android:orientation="vertical"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">
        		<TextView
        			android:id="@+id/citylabel"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/city"/>
       			<TextView
        			android:id="@+id/city"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:layout_toRightOf="@id/citylabel"
        			android:text="" /> 
        		</RelativeLayout>
        	<RelativeLayout 
       			android:orientation="vertical"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">	   			
        		<TextView
        			android:id="@+id/zonecodelabel"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/zonecode"/>
       			<TextView
        			android:id="@+id/zonecode"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:layout_toRightOf="@id/zonecodelabel"
        			android:text="" />    		
        		</RelativeLayout>	
        	<RelativeLayout 
       			android:orientation="vertical"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">
        		<TextView
        			android:id="@+id/agentnamelabel"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/agentname"/>
       			<TextView
        			android:id="@+id/agentname"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:layout_toRightOf="@id/agentnamelabel"
        			android:text="" />
        	</RelativeLayout>		
            </LinearLayout>   
             <LinearLayout
				android:id="@+id/custlocationView"            	
				android:orientation="vertical"
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent">
            	<ListView 
            		android:id="@+id/custloclist"
            		android:orientation="vertical"
            		android:layout_width="fill_parent"
            		android:layout_height="fill_parent"
            		/>
			</LinearLayout>
           <LinearLayout
				android:id="@+id/preferenceView"            	
				android:orientation="vertical"
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent">
    		<RelativeLayout 
       			android:orientation="vertical"
       			android:gravity="center_horizontal"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">
            <TextView 
                android:id="@+id/xlabel"
       			android:gravity="center_horizontal"        			                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/xoffset" />
           <EditText
        		android:id="@+id/xoffset"
        		android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
       			android:numeric="integer"
        		android:layout_toRightOf="@id/xlabel"
       			android:gravity="center_horizontal"
       			android:background="@android:drawable/editbox_background"/> 
            <TextView 
                android:id="@+id/ylabel"
                android:layout_toRightOf="@id/xoffset"
       			android:gravity="center_horizontal"        			                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/yoffset" />
           <EditText
        		android:id="@+id/yoffset"
        		android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
       			android:numeric="integer"
        		android:layout_toRightOf="@id/ylabel"
       			android:gravity="center_horizontal"
       			android:background="@android:drawable/editbox_background"/>         			  
             </RelativeLayout>
        	<RelativeLayout 
       			android:orientation="vertical"
       			android:gravity="center_horizontal"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">
        			<Button
        				android:id="@+id/test"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_marginLeft="10dip"
        				android:text="@string/test" />	
        			<Button
        				android:id="@+id/save"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_toRightOf="@id/test"
        				android:layout_marginLeft="10dip"
        				android:text="@string/save" />	
        </RelativeLayout>
        </LinearLayout>   	   
        <LinearLayout
				android:id="@+id/aboutView"            	
				android:orientation="vertical"
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent">  
            <RelativeLayout 
       			android:orientation="vertical"
       			android:gravity="center_horizontal"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">
        		<TextView 
                android:id="@+id/dbversionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/dbversion" />
                <TextView 
                android:id="@+id/dbversion"
                android:layout_toRightOf="@id/dbversionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="" />
        	</RelativeLayout>
            <RelativeLayout 
       			android:orientation="vertical"
       			android:gravity="center_horizontal"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">
        		<TextView 
                android:id="@+id/appversionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/appversionlabel" />
                <TextView 
                android:id="@+id/appversion"
                android:layout_toRightOf="@id/appversionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/appversion" />
        	</RelativeLayout>   
            <RelativeLayout 
       			android:orientation="vertical"
       			android:gravity="center_horizontal"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">
                <TextView 
                android:id="@+id/appinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/appinfo" />
        	</RelativeLayout>  
            <RelativeLayout 
       			android:orientation="vertical"
       			android:gravity="center_horizontal"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">
        		<TextView 
                android:id="@+id/emaillabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/emaillabel" />
                <TextView 
                android:id="@+id/email"
                android:layout_toRightOf="@id/emaillabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/email" />
        	</RelativeLayout>         	       	     	
        </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</TabHost>